- Added preset "Split-Text Mode" - Renamed Queue Mode to Track-List Mode and Big-Text Mode to Current-Song Mode - Fixed track list overflowing in split-text mode - Order of setting categories is deterministic now

--- a/src/main/resources/static/design/style.css
+++ b/src/main/resources/static/design/style.css
@@ -437,6 +437,7 @@ div#context-main {
     gap: 1vh;
     --font-scale: 1vh;
     text-align: center;
+    max-height: 100%;
 }
 
 #center-info-main.left {
@@ -533,6 +534,7 @@ div#description {
     grid-auto-rows: min-content;
     grid-gap: 0 2vh;
     max-width: 100%;
+    max-height: 100%;
     scrollbar-width: thin;
     overflow-y: hidden;
     mask-repeat: no-repeat;
